[project]
name = "agno-agents"
version = "0.1.0"
description = "Agents based on agno framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.1.17",
    "crawl4ai>=0.5.0.post4",
    "duckduckgo-search>=7.5.3",
    "googlesearch-python>=1.3.0",
    "httpx[socks]>=0.28.1",
    "lancedb>=0.21.1",
    "ollama>=0.4.7",
    "openai>=1.68.2",
    "pycountry>=24.6.1",
    "pypdf>=5.4.0",
    "rtoml>=0.12.0",
    "sqlalchemy>=2.0.39",
    "tantivy>=0.22.2",
    "yfinance>=0.2.55",
]
