[project]
name = "agno-agents"
version = "0.1.0"
description = "Agents based on agno framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno",
    "crawl4ai",
    "ddgs",
    "googlesearch-python",
    "httpx[socks]",
    "lancedb",
    "ollama",
    "openai",
    "pycountry",
    "pypdf",
    "rtoml",
    "sqlalchemy",
    "tantivy",
    "tavily-python",
    "yfinance",
]
