[project]
name = "agno-agents"
version = "0.1.0"
description = "Agents based on agno framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno",
    "crawl4ai",
    "ddgs",
    "exa_py",
    "googlesearch-python",
    "httpx[socks]",
    "lancedb",
    "ollama",
    "openai",
    "pycountry",
    "pypdf",
    "rtoml",
    "sqlalchemy",
    "tantivy",
    "tavily-python",
    "yfinance",
]

[tool.ruff.lint]
ignore = ["E402", "E701", "E731", "F403", "F405"]

[tool.ty.src]
exclude = [".venv", "mal", "db"]
